@@ -6,7 +6,8 @@ from werkzeug.exceptions import Forbidden, Unauthorized
 
 from trytond.tools import resolve
 from trytond.config import config
-from trytond.exceptions import UserError, UserWarning, ConcurrencyException
+from trytond.exceptions import (UserError, UserWarning,
+    ConcurrencyException, TimeoutException)
 
 error_handler_configuration = config.get('admin', 'error_handling_class')
 
@@ -95,7 +96,7 @@ def error_wrap(func):
         try:
             return func(*args, **kwargs)
         except (UserError, UserWarning, ConcurrencyException, Forbidden,
-                Unauthorized):
+                Unauthorized, TimeoutException):
             # Those errors are supposed to make their way to the end user
             raise
         except Exception as e:
